Committed by TeXstudio

--- a/results.tex
+++ b/results.tex
@@ -4,4 +4,7 @@
 	\subitem Data sources
 	\subitem Assessment criteria
 \end{itemize}
-To demonstrate the functionality and capabilities of the TOTUS framework, we focused on the city of Christchurch, New Zealand (XXXX S,XXXX E\todo{Get Chch coordinates})
+To demonstrate the functionality and capabilities of the TOTUS framework, we focused on the city of Christchurch, New Zealand (43°31′48″S, 172°37′13″E) that over the past few years has suffered dramatic changes to its natural and urban landscape as the result of significant earthquakes. These changes in the urban form of Christchurch were evaluated in terms of changes in the long term exposure to traffic pollution as well as total energy use.
+
+
+43°31′48″S 172°37′13″E
