--- a/methods.tex
+++ b/methods.tex
@@ -33,5 +33,5 @@ The TOTUS system consists of a set of services built around a geospatial databas
 
 \subsubsection*{TOTUS Modules}
 \input{modules.tex}
-\subsection*{DATA}
+\subsection*{System Set Up}
 \input{data.tex}
