Slowly getting back on this

--- a/methods.tex
+++ b/methods.tex
@@ -38,3 +38,5 @@ The code is released under the GPL(?) license and it is available in the project
 \input{modules.tex}
 \subsection*{DATA}
 \input{data.tex}
+\subsection{Setup}
+\input{setup.tex}
